standardize error handling + append requestID to response header
